--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 
         <!-- 글 작성 버튼 -->
         <div class="article_button">
-            <button class="button_blue" onclick="location.href='/article/write'">작성하기</button>
+            <button class="button_blue btn btn-primary" onclick="location.href='/article/write'">작성하기</button>
         </div>
     </div>
     <!-- 작성된 글 리스트가 없을 시 문구 표시 -->
