--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -15,9 +15,9 @@
     <!-- 수정/삭제 버튼 -->
     <div class="article_button" sec:authorize="isAuthenticated()">
         <!-- 수정 버튼 -->
-        <button th:if="${article.member.id == @authenticationUtil.getCurrentMember()?.id}" class="button_blue" th:onclick="|location.href='@{/article/update/{id}(id=${article.id})}'|">수정하기</button>
+        <button th:if="${article.member.id == @authenticationUtil.getCurrentMember()?.id}" class="button_blue btn btn-primary" th:onclick="|location.href='@{/article/update/{id}(id=${article.id})}'|">수정하기</button>
         <!-- 삭제 버튼 -->
-        <button th:if="${article.member.id == @authenticationUtil.getCurrentMember()?.id}" onclick="articleDelete()" class="button_red" >삭제하기</button>
+        <button th:if="${article.member.id == @authenticationUtil.getCurrentMember()?.id}" onclick="articleDelete()" class="button_red btn btn-danger" >삭제하기</button>
     </div>
     <!-- 글 정보 -->
     <div class="article">
@@ -26,17 +26,19 @@
         <!-- 글 내용 -->
         <div class="detail_content_area" th:text="${article.content}"></div></br>
         <!-- 글 작성자 -->
+        <a href="javascript:;">
         <span class="article_addtext bold" id="article_addtext_writer" th:text="${article.member.usernick}"></span>
+        </a>
         <span> · </span>
         <!-- 글 작성 시간 -->
         <span class="article_addtext" th:text="${@timeUtil.calculateTimeAgo(article.createdDate)}"></span>
         <span> · </span>
         <!-- 글 조회수  -->
         <span class="article_addtext" th:text="${article.viewcount}"></span></br>
-        <div style="position:absolute; display:none; margin-top:10px" id="noteSend_Window">
+        <div class="list-group" style="position:absolute; display:none; margin-top:10px" id="noteSend_Window">
             <ul>
                 <li>
-                    <button style="border-radius:5px; border:1px solid black" id="open-message-btn">쪽지 보내기</button>
+                    <a href="#" class="list-group-item list-group-item-action" id="open-message-btn">쪽지 보내기</a>
                 </li>
             </ul>
         </div>
@@ -99,12 +101,12 @@
                     <!-- 대댓글 입력 창 -->
                     <textarea type="text" th:id="'reply_content' + ${comment.id}" ></textarea>
                     <!-- 대댓글 등록 버튼 -->
-                    <button onclick="replySubmit(this.getAttribute('data-article-id'),this.getAttribute('data-comment-id'))" th:attr="data-article-id=${article.id},data-comment-id=${comment.id}" class="reply-submit">등록</button>
+                    <button onclick="replySubmit(this.getAttribute('data-article-id'),this.getAttribute('data-comment-id'))" th:attr="data-article-id=${article.id},data-comment-id=${comment.id}" class="reply-submit btn btn-primary">등록</button>
                 </div>
                 <!-- 권한이 없을시 로그인 문구 표시 -->
                 <div sec:authorize="isAnonymous()" class="disabled">
                     <textarea type="text" >로그인을 해주세요</textarea>
-                    <button >등록</button>
+                    <button class="btn btn-primary">등록</button>
                 </div>
             </div>
         </div>
@@ -135,12 +137,12 @@
                 <!-- 댓글 입력 창 -->
                 <textarea type="text" id="content" ></textarea>
                 <!-- 댓글 등록 버튼 -->
-                <button onclick="commentSubmit(this.getAttribute('data-article-id'))" th:attr="data-article-id=${article.id}" >등록</button>
+                <button onclick="commentSubmit(this.getAttribute('data-article-id'))" th:attr="data-article-id=${article.id}" class="btn btn-primary" >등록</button>
             </div>
            <!-- 권한이 없을시 로그인 문구 표시 -->
              <div sec:authorize="isAnonymous()" class="disabled">
                 <textarea type="text" >로그인을 해주세요</textarea>
-                <button >등록</button>
+                 <button class="btn btn-primary">등록</button>
             </div>
     </div>
     <script th:inline="javascript">
