--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -38,7 +38,7 @@
         <div class="list-group" style="position:absolute; display:none; margin-top:10px" id="noteSend_Window">
             <ul>
                 <li>
-                    <a href="#" class="list-group-item list-group-item-action" id="open-message-btn">쪽지 보내기</a>
+                    <a href="javascript:;" class="list-group-item list-group-item-action" id="open-message-btn">쪽지 보내기</a>
                 </li>
             </ul>
         </div>
@@ -158,7 +158,7 @@
                        }
                      });
                              document.getElementById('open-message-btn').addEventListener('click', function() {
-                          window.open('/message', '쪽지 보내기', 'width=400,height=420');
+                          window.open('/message?id=' + [[${article.member.email}]], '쪽지 보내기', 'width=400,height=420');
                      });
                    });
 
