쪽지 임시 차단 기능 쪽지 영구 차단 기능 쪽지 만료기간 90일 적용 authenticationEntryPoint,accessDeniedHandler 설정

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -146,9 +146,11 @@
 
 
         $(document).ready(function() {
-            document.getElementById("usernick").addEventListener('click', function(event) {
-                document.getElementById("my_page").style.display = 'block';
-            });
+            if(document.getElementById("usernick") != null) {
+                document.getElementById("usernick").addEventListener('click', function(event) {
+                    document.getElementById("my_page").style.display = 'block';
+                });
+            }
         });
 
 
