--- a/src/main/resources/templates/note.html
+++ b/src/main/resources/templates/note.html
@@ -18,9 +18,9 @@
     padding-left:720px;
     margin-bottom: 30px;">
         <a href="javascript:;">
-        <span>쪽지 차단</span>
+        <span id="note_block_button">쪽지 차단</span>
         </a>
-        <div id="my_page" class="list-group" style="position:absolute; display:block; padding-left:20px">
+        <div id="Note_blockpage" class="list-group" style="position:absolute; display:none; padding-left:20px">
             <ul>
                 <a href="javascript:;" id="Temporary_Block" class="list-group-item list-group-item-action">
                     임시 거부
@@ -88,7 +88,12 @@
 
         $(document).ready(function() {
 
-                  document.getElementById("Temporary_Block").addEventListener('click',function() {
+            document.getElementById("note_block_button").addEventListener('click',function() {
+                     document.getElementById("Note_blockpage").style.display = 'block';
+            });
+
+
+            document.getElementById("Temporary_Block").addEventListener('click',function() {
                                            $.ajax({
                                         　　type:'post'
                                         　　, contentType:'application/json'
@@ -146,6 +151,12 @@
 
                  });
               }
+
+              document.addEventListener('click', function(event) {
+               if(!document.getElementById("my_page").contains(event.target) && event.target !== document.getElementById("note_block_button") ) {
+                document.getElementById("Note_blockpage").style.display = 'none';
+               }
+           });
         });
 
 
