--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -50,6 +50,9 @@
             <img th:src="@{${imageUrl}}" width="750px" height="375px">
         </div>
     </div>
+    <div class="detail_tag-container">
+        <ul id="tag-list"></ul>
+    </div>
     <!-- 댓글 갯수 -->
     <div class="comment_count ">
         💬 댓글
